force-app/main/default/objects/sf_scm__PushSubscription__c/sf_scm__PushSubscription__c.object-meta.xml
<CustomObject>
    <label>PushSubscription</label>
    <nameField>
        <label>Subscription</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PushSubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>