force-app/main/default/objects/sf_scm__PushSubscription__c/fields/sf_scm__Enabled__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>