force-app/main/default/objects/sf_scm__PushSubscription__c/fields/sf_scm__FieldName__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__FieldName__c</fullName>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>