force-app/main/default/objects/sf_scm__PushSubscription__c/fields/sf_scm__FromValue__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__FromValue__c</fullName>
    <label>FromValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>