force-app/main/default/objects/sf_scm__PushSubscription__c/fields/sf_scm__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__ObjectType__c</fullName>
    <label>ObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>