force-app/main/default/objects/sf_scm__PushSubscription__c/fields/sf_scm__Operator__c.field-meta.xml
<CustomField>
    <fullName>sf_scm__Operator__c</fullName>
    <label>Operator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>